--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -192,7 +192,7 @@ html(lang='en')
             });
           }
           //- default freshchat script
-          
+
           //- function initialize(i,t){var e;i.getElementById(t)?initFreshChat():setTimeout(function() {((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}, 100)}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
           (function (d, w, c) { if(!d.getElementById("spd-busns-spt")) { var n = d.getElementsByTagName('script')[0], s = d.createElement('script'); var loaded = false; s.id = "spd-busns-spt"; s.async = "async"; s.setAttribute("data-self-init", "false"); s.setAttribute("data-init-type", "opt"); s.src = 'https://cdn.freshbots.ai/assets/share/js/freshbots.min.js'; s.setAttribute("data-client", "cc75206fb31a8af22f08a88ee68bbf974436bbe2"); s.setAttribute("data-bot-hash", "a23bded977f08b7f22458799242a7d7c5747d3fd"); s.setAttribute("data-env", "prod"); s.setAttribute("data-region", "us"); if (c) { s.onreadystatechange = s.onload = function () { if (!loaded) { c(); } loaded = true; }; } n.parentNode.insertBefore(s, n); } }) (document, window, function () { Freshbots.initiateWidget({ autoInitChat: false, getClientParams: function () { return {"cstmr::eml":"","sn::auth::id":"","cstmr::nm":""}; } }, function(successResponse) { }, function(errorResponse) { }); })
             //- function initialize(i,t){var e;i.getElementById(t)?initFreshChat():setTimeout(function() {((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}, 100)}
@@ -207,6 +207,7 @@ html(lang='en')
               if (window.innerHeight - window.pageYOffset < 0) {
                   const isMenuOpen = document.getElementById("chat-button") && document.getElementById("chat-button").classList.contains("chat-close");
                   const scrollToTopButton = document.getElementById("scrollToTop-btn");
+                  console.log(isMenuOpen,scrollToTopButton)
                   if (!isMenuOpen && scrollToTopButton && scrollToTopButton.classList.contains("scrollToTop-btn-hidden")) {
                       scrollToTopButton.classList.replace("scrollToTop-btn-hidden", "scrollToTop-btn");
                   }
@@ -230,9 +231,9 @@ html(lang='en')
             //- if(!window.fcWidget) {
             //-   initialize(document,"freshchat-js-sdk");
             //- }
-            //- window.removeEventListener('scroll', initializeFreshChat);
+            window.removeEventListener('scroll', initializeFreshChat);
           }
-          //- window.addEventListener('scroll', initializeFreshChat)
+          window.addEventListener('scroll', initializeFreshChat)
 
     body
         noscript.
@@ -241,9 +242,9 @@ html(lang='en')
         div(id='main', class='main') !{content}
         div !{newrelicScript}
         div !{scripts}
-        div(id="chat-container" class='chat-container')
-          div(id='scrollToTop-btn' class='scrollToTop-btn-hidden' onClick='ScrollToTop()')
-            i(class='icon_uparrow-white')
+        //- div(id="chat-container" class='chat-container')
+        div(id='scrollToTop-btn' class='scrollToTop-btn-hidden' onClick='ScrollToTop()')
+          i(class='icon_uparrow-white')
           //- a(href='https://wa.me/+917669303665' target='_blank' rel='noopener noreferrer')
           //-   div(id='whatsapp' class='whatsapp-img whatsapp-active')
           //-     //- img(src="/static/images/whatsapp.svg", alt="whatsapp icon" width='40px')
