--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -65,7 +65,7 @@
     -o-transform: translateY(0);
   }
   .mobile-chat-container {
-    bottom: 160px !important;
+    bottom: 30px !important;
     right: 10px !important;
   }
   .chat-container .chat-history {
@@ -261,5 +261,9 @@
     position: fixed;
     right: 12px;
     z-index: 9;
+  }
+  .mobile-chat-container {
+    bottom: 230px !important;
+    right: 10px !important;
   }
 }
