--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -9,7 +9,7 @@
     text-align: center;
 }
 .bg-profile {
-    background: url(../../images/myaccountBg.jpg) repeat;
+    background: url(../../images/myAccountBg2.png) repeat;
     height: auto;
 }
 .popup-form-bg {
@@ -29,16 +29,11 @@
     
 } 
 .heading {
-    font-size: 25px;
-    font-family: $font-Serif;
-    line-height: 50px;
+    @include h3_20px_lora_charcoal();
     margin-top: 30px;
 }
 .sub-Heading {
-    font-size: 12px;
-    font-family: $font-Lato;
-    color: #666;
-    letter-spacing: 1px;
+    @include b3_14px_montserrat_charcoal();
 }
 .add {
     address {
@@ -235,4 +230,216 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.charcoal-btn{
+    background-color: #4C4C4C;
+    @include b3_14px_montserrat_white();
+    text-transform: uppercase;
+    letter-spacing: 0.42px;
+    line-height: 52px;
+    width: 100%;
+    text-align: center;
+    border: 1px solid #4C4C4C;
+    border-radius: 0;
+    cursor: pointer;
+}
+
+.my-order-block {
+    border: 1px solid #E5E5E5;
+    position: relative;
+    label {
+      background-color: #ffffff;
+      position: absolute;
+      top: 0;
+      left: 12px;
+      transform: translateY(-50%);
+      @include b4_12px_montserrat_charcoal_caps();
+      margin-bottom: unset;
+      padding: 0px 10px;
+    }
+    .order-data{
+      display: flex;
+      justify-content: space-between;
+      padding: 30px 30px 0px 30px;
+      &.single-order{
+        padding: 30px;
+      }
+      .info{
+        width: 45%;
+        .row{
+          text-align: left;
+          margin-bottom: 6px;
+          .label{
+            @include b4_12px_montserrat_charcoal();
+          }
+          .data{
+            @include b4_12px_montserrat_charcoal();
+            font-weight: $semibold;
+            text-transform: uppercase;
+            &.date{
+              text-transform: capitalize;
+            }
+          }
+        }
+      }
+      .amount-paid{
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        .label{
+          @include b4_12px_montserrat_charcoal();
+          margin-bottom: 6px;
+        }
+        .data{
+          @include b4_12px_montserrat_charcoal();
+          font-weight: $semibold;
+          text-transform: uppercase;
+        }
+      }
+    }
+    .address-block {
+      display: flex;
+      justify-content: space-between;
+      border: 1px solid #E5E5E5;
+      border-left: none;
+      border-right: none;
+      margin: 0 30px;
+      padding: 30px 0;
+      .address{
+        width: 40%;
+        .title{
+          font-family: $font-Montserrat;
+          font-size: 12px;
+          font-weight: $medium;
+          color: #9f9f9f;
+          letter-spacing: 0.5px;
+          text-transform: uppercase;
+          line-height: 20px;
+          margin-bottom: 15px;
+          text-align: left;
+        }
+        .row {
+          @include b4_12px_montserrat_charcoal();
+          font-weight: $light;
+          letter-spacing: 0.3px;
+          line-height: 18px;
+          text-align: left;
+          &.name {
+            @include b4_12px_montserrat_charcoal();
+            font-weight: $medium;
+            line-height: 20px;
+            padding-bottom: 10px
+          }
+          &.phone-number {
+            @include b4_12px_montserrat_charcoal();
+            line-height: 20px;
+            letter-spacing: 0.5px;
+            margin-top: 10px;
+          }
+        }
+      }
+    }
+    .product{
+      padding: 30px;
+      display: flex;
+      .image-container{
+        margin-right: 20px;
+        width: 90px;
+        img {
+          width: 100%;
+        }
+      }
+      .product-info{
+        text-align: left;
+        p{
+          margin-bottom: 10px;
+        }
+        .collection{
+          font-family: $font-Serif;
+          font-size: 12px;
+          letter-spacing: 2px;
+          text-transform: uppercase;
+          color: #999;
+          line-height: 16px;
+        }
+        .title{
+          font-family: $font-Lora;
+          font-size: 14px;
+          color: #191919;
+          letter-spacing: 0.28px;
+          line-height: 22px;
+        }
+        .price {
+          .amount-paid{
+            @include b3_14px_montserrat_charcoal();
+            &.gold{
+              color: $gold;
+            }
+            text-transform: uppercase;
+          }
+          .original-price{
+            @include b4_12px_montserrat_charcoal();
+            color: #9f9f9f;
+            text-decoration: line-through;
+            margin-left: 8px;
+          }
+        }
+        .size, .quantity{
+          @include b5_10px_montserrat_charcoal();
+          letter-spacing: 0.5px;
+          line-height: 20px;
+        }
+      }
+    }
+    .prices{
+      background-color: #f4f4f4;
+      padding: 30px;
+      .price{
+        display: flex;
+        justify-content: space-between;
+        line-height: 40px;
+        @include b4_12px_montserrat_charcoal_caps();
+        letter-spacing: 0.5px;
+        &.discount{
+          color: $gold;
+        }
+        &.total{
+          border-top: 1px solid #e5e5e5;
+          font-weight: $semibold;
+          line-height: 50px;
+        }
+        .label{
+          .light{
+            font-size: 9px;
+            font-weight: $regular;
+            text-transform: capitalize;
+            font-style: italic;
+          }
+        }
+      }
+    }
+    .actions {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+      padding: 0px 30px 30px 30px;
+      .action{
+        @include b4_12px_montserrat_charcoal_caps();
+        text-decoration: underline;
+        text-underline-offset: 4px;
+        &.disabled{
+          color: #19191950;
+          cursor: not-allowed;
+          *{
+            color: #19191950;
+            cursor: not-allowed;
+          }
+        }
+        &:hover{
+          color: $gold;
+        }
+      }
+    }
 }
